added google credentials + scopes

--- a/user-service/application.yml
+++ b/user-service/application.yml
@@ -8,3 +8,6 @@ spring:
           google:
             client-id: 1020310925623-9dr91uhg10360o6nm1oaqeg38lmtvahi.apps.googleusercontent.com
             client-secret: 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
+            scope:
+              - email
+              - profile
