--- a/application.yml
+++ b/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/rksp8
+    url: jdbc:postgresql://postgresql:5432/rksp8
     username: user
     password: password
 
